argocd/base/kafka/kafka-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopcloud
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-1
  namespace: shopcloud
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.3.2
          ports:
            - containerPort: 2181
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-1
  namespace: shopcloud
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-1
  namespace: shopcloud
  labels:
    app: kafka-broker-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-1
  template:
    metadata:
      labels:
        app: kafka-broker-1
    spec:
      hostname: kafka-broker-1
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.3.2
          ports:
            - containerPort: 9092
            - containerPort: 29092
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
            limits:
              memory: "200Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-1
  namespace: shopcloud
spec:
  ports:
    - name: external
      port: 9092
      targetPort: 9092
    - name: internal
      port: 29092
      targetPort: 29092
  selector:
    app: kafka-broker-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-2
  namespace: shopcloud
  labels:
    app: kafka-broker-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker-2
  template:
    metadata:
      labels:
        app: kafka-broker-2
    spec:
      hostname: kafka-broker-2
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.3.2
          ports:
            - containerPort: 9093
            - containerPort: 29093
          resources:
            requests:
              memory: "100Mi"
              cpu: "200m"
            limits:
              memory: "200Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-2
  namespace: shopcloud
spec:
  ports:
    - name: external
      port: 9093
      targetPort: 9093
    - name: internal
      port: 29093
      targetPort: 29093
  selector:
    app: kafka-broker-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-monitoring-ui
  namespace: shopcloud
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "150m"
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: shopcloud
spec:
  ports:
    - port: 8082
      targetPort: 8080
  selector:
    app: kafka-ui
  type: ClusterIP
