argocd/base/kafka/kafka-controller-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-controller-headless
  namespace: "shopcloud"
  labels:
    app.kubernetes.io/name: kafka
    helm.sh/chart: kafka-25.0.0
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller-eligible
    app.kubernetes.io/part-of: kafka
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-interbroker
      port: 9094
      protocol: TCP
      targetPort: interbroker
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: client
    - name: tcp-controller
      protocol: TCP
      port: 9093
      targetPort: controller
  selector:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/component: controller-eligible
    app.kubernetes.io/part-of: kafka
