argocd/base/kafka/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: "shopcloud"
  labels:
    app.kubernetes.io/name: kafka
    helm.sh/chart: kafka-25.0.0
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kafka
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: client
      nodePort: null
  selector:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/part-of: kafka
